# mai_os

kp/: 215_Самарский_КП.docx  CMakeLists.txt
kp/src/: AllocatorBase.h  NaiveAllocator.h  main.cpp
kp/src/tests/: concrete_buffers_tests.h  iterative_buffers_tests.h  random_buffers_tests.h  result.h
lab1/: 215_Самарский_Лаб1.docx
lab2/: 215_Самарский_Лаб2.docx  CMakeLists.txt  benchmark_output.csv  benchmark_output.xlsx  benchmark_output2.csv  build.sh  show_threads.sh
lab2/main/: benchmark.cpp  benchmark_csv.cpp  main.cpp  sort.cpp  sort.h  tests.cpp
lab3/: 215_Самарский_Лаб3.docx  CMakeLists.txt  input.txt  input_0.txt
lab3/child/: main.cpp
lab3/main/: common.h  main.cpp
lab4/: 215_Самарский_Лаб4.docx  CMakeLists.txt  build.sh
lab4/src/: GCF_Euclid.cpp  GCF_Naive.cpp  Program1.cpp  Program2.cpp  Square_Rectangle.cpp  Square_Triangle.cpp
lab5/: 215_Самарский_Лаб5-7.docx  CMakeLists.txt
lab5/src/common/: Node.cpp  Node.h  NodeSwarm.h  Transport.h  message.cpp  message.h  messaging.cpp  messaging.h
lab5/src/master/: MasterNodeSwarm.cpp  MasterNodeSwarm.h  main.cpp
lab5/src/slave/: SlaveNodeSwarm.cpp  SlaveNodeSwarm.h  main.cpp
